# movie-recommender

./: .gitignore  README.md  docker-compose.yml  dockerfile  main.py
.github/workflows/: backend-ci.yml  docker-publish.yml  node.js.yml
backend/: .dockerignore  Dockerfile  README.md  main.py  requirements-dev.txt  requirements.txt  router_loader.py
backend/app/api/algorithms/: router.py
backend/app/api/evaluate/: router.py
backend/app/api/movies/: router.py
backend/app/api/recommend/: router.py
backend/app/api/train/: router.py
backend/app/api/users/: router.py
backend/app/schemas/: __init__.py
backend/app/services/: registry.py
backend/app/utils/: settings.py
backend/tests/: test_smoke.py
core/: README.md  pyproject.toml
core/recommender/: __init__.py  __main__.py  data.py  engine.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.test.js
frontend/src/api/: client.js
my-app/: package.json
my-app/src/: App.js  App.test.js
